tests/parser/for-statement-block-error.stderr
error: expected '{'
 --> $DIR/for-statement-block-error.lox:1:16
  |
1 | for c in "foo" _
  |                ^
