tests/parser/for-statement-block-error.lox
for c in "foo" _
